--- a/OtrsReports/Views/Shared/_Layout.cshtml
+++ b/OtrsReports/Views/Shared/_Layout.cshtml
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html" ; charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" asp-href-include="~/lib/font-awesome/css/*.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-table/bootstrap-table.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-table/extensions/group-by-v2/bootstrap-table-group-by.min.css" />
     <link rel="stylesheet" href="~/css/main.css" />
